--- a/package.json
+++ b/package.json
@@ -1,4 +1,26 @@
 {
     "name": "alpine-plugin-template",
-    "description": ""
+    "description": "A simple template for Alpine.js plugins.",
+    "license": "MIT",
+    "author": "Ryan Chandler <support@ryangjchandler.co.uk>",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/ryangjchandler/alpine-plugin-template"
+    },
+    "scripts": {
+        "build": "microbundle",
+        "watch": "microbundle watch",
+        "test": "jest"
+    },
+    "dependencies": {
+        "alpinejs": "^2.6.0"
+    },
+    "devDependencies": {
+        "@babel/preset-env": "^7.9.5",
+        "@testing-library/dom": "^7.2.2",
+        "@testing-library/jest-dom": "^5.5.0",
+        "jest": "^25.4.0",
+        "jsdom-simulant": "^1.1.2",
+        "microbundle": "^0.11.0"
+    }
 }
